# lex-docx

./: .gitignore  README.md  __init__.py  cleanup.py  cli.py  config.py  constants.py  defined_terms.py  doctor.py  footer_ops.py  format_brush.py  inject_engine.py  jt_note.py  lex_docx.sh  lint.py  lint_config.py  para_query.py  pyproject.toml  table_ops.py  tc_ops.py  tc_utils.py
.github/workflows/: notify-openclaw.yml
agents/assassin/: focus.md
