[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-docx"
version = "0.4.0"
description = "DOCX automation tools for legal due diligence and contract review"
readme = "README.md"
authors = [
    {name = "Assassin", email = "assassin@kingsclaws.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "python-docx>=0.8.11",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
lex-docx = "lex_docx.cli:main"

[tool.setuptools]
packages = ["lex_docx"]
